# Model-selection-and-evaluation

./: README.md  app.py  data_processor.py  db.py  evaluation.py  model_manager.py  pyproject.toml  visualization.py
attached_assets/: Pasted-Core-Features-and-Execution-Workflows-1-Data-Ingestion-and-Preprocessing-Purpose-Allow-users-to-up-1744377241740.txt
